--- a/index.html
+++ b/index.html
@@ -54,20 +54,30 @@
       padding: 20px;
       gap: 10px;
     }
-
-    #chart-form-container {
-      width: 45%;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
+#map {
+      width: 100%;
+      height: 100%;
+}
+ #chart-container {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: rgba(0, 0, 0, 0.9);
+      padding: 10px;
+      border-radius: 10px;
+      max-width: 400px;
+      display: none;
     }
 
-    #chart-box h2{
-      background: White;
-      padding: 75px;
-      border-radius: 15px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
-     margin-bottom: 10px;
+    #chart-container img {
+      width: 100%;
+      border-radius: 8px;
+    }
+
+    #chart-title {
+      font-size: 1.1em;
+      margin-bottom: 8px;
+      text-align: center;
     }
 
   
@@ -118,12 +128,11 @@
   </header>
 
   <main>
-    <div id="chart-form-container">
-
-     <div id="chart-box">
-  <h2>Select a District to View Forest Loss</h2>
-  <img id="chart-image" src="" alt="District Chart" style="max-width:100%; display:none;" />
-</div>
+   <div id="map"></div>
+  <div id="chart-container">
+    <div id="chart-title"></div>
+    <img id="chart-image" src="" alt="Forest Loss Chart">
+  </div>
      
 <div>
        <h2>Submit Your Local Observation</h2>
@@ -133,7 +142,7 @@
 
     </div>
 
-    <div id="map"></div>
+    
   </main>
 
   <footer>
