--- a/index.html
+++ b/index.html
@@ -27,14 +27,21 @@
       
     }
 
-legend {
- 
-    padding: 8px;
+
+  .legend {
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+    background: white;
+    padding: 10px;
     font-size: 12px;
-    line-height: 1.5em;
+    line-height: 18px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
-}
+    z-index: 1000;
+  }
+
+
    
     header {
       background: linear-gradient(to right, #00695c, #26a69a);
@@ -72,7 +79,7 @@ legend {
 
     #chart-box h2{
       background: White;
-      padding: 75px;
+      padding: 20px;
       border-radius: 15px;
       box-shadow: 0 0 12px rgba(0,0,0,0.1);
      margin-bottom: 10px;
@@ -141,15 +148,15 @@ legend {
 
     </div>
 
-<div id="legend">
-  <h4>Forest Loss Year (2001–2023)</h4>
-  <div class="legend-item"><span style="background: #440154"></span> 2001</div>
-  <div class="legend-item"><span style="background: #482576"></span> 2005</div>
-  <div class="legend-item"><span style="background: #3b528b"></span> 2010</div>
-  <div class="legend-item"><span style="background: #2c728e"></span> 2015</div>
-  <div class="legend-item"><span style="background: #27ad81"></span> 2020</div>
-  <div class="legend-item"><span style="background: #5ec962"></span> 2023</div>
+   <div id="legend" class="legend">
+  <b>Forest Loss (2001–2023)</b><br>
+  <i style="background:#440154;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 0–50 km²<br>
+  <i style="background:#31688e;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 51–100 km²<br>
+  <i style="background:#35b779;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 101–150 km²<br>
+  <i style="background:#fde725;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 151–200 km²<br>
+  <i style="background:#ffea46;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 201+ km²
 </div>
+
 
    
     <div id="map"></div>
