--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
   .legend {
-    position: absolute;
+   
     bottom: 30px;
     left: 30px;
     background: white;
@@ -147,15 +147,16 @@
       </div>
 
     </div>
-
-   <div id="legend" class="legend">
-  <b>Forest Loss (2001–2023)</b><br>
-  <i style="background:#440154;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 0–50 km²<br>
-  <i style="background:#31688e;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 51–100 km²<br>
-  <i style="background:#35b779;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 101–150 km²<br>
-  <i style="background:#fde725;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 151–200 km²<br>
-  <i style="background:#ffea46;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 201+ km²
+<!-- Legend for Forest Loss Year Ranges -->
+<div id="legend" class="legend">
+  <b>Forest Loss Year</b><br>
+  <i style="background:#440154;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 2001–2005<br>
+  <i style="background:#31688e;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 2006–2010<br>
+  <i style="background:#35b779;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 2011–2015<br>
+  <i style="background:#fde725;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 2016–2020<br>
+  <i style="background:#ffea46;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 2021–2023
 </div>
+
 
 
    
