--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-  
+  <!-- Leaflet Control Geocoder -->
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"
+/>
+<script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+
 
   <!-- Style -->
   <style>
@@ -26,7 +32,10 @@
      width: 100%;
       
     }
-
+.custom-icon {
+    font-size: 24px;
+    text-align: center;
+  }
 
   .legend {
     position: absolute;
@@ -140,11 +149,7 @@
   <img id="chart-image" src="" alt="District Chart" style="max-width:100%; display:none;" />
 </div>
      
-<div>
-       <h2>Submit Your Local Observation</h2>
-        <p>Please help us improve forest protection efforts by reporting on-the-ground activities or conditions.</p>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdc6T4gmsntB7ijvL3HtLtmL0y5fXKbxHh6yRRmrH42zZCpFg/viewform?embedded=true">Loading…</iframe>
-      </div>
+
 
     </div>
 
