--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
  
 
- <div id="reportBox">
+ <div id="reportBox" class="report-box">
   <h4>Comment here... ! </h4>
   <label>Location:</label>
   <input id="reportLocation" placeholder="Click map to select" disabled><br>
@@ -179,6 +179,18 @@
   <button onclick="submitReport()">Submit</button>
 </div>
 
+<div id="map" style="height: 100vh;"></div>
+
+<!-- Reporting Box (bottom-left) -->
+<div id="reportBox" class="report-box">
+  <h4>Report Deforestation</h4>
+  <input type="text" id="locationInput" placeholder="Location" readonly><br>
+  <input type="text" id="problem" placeholder="Short Issue (e.g. Tree Cutting)"><br>
+  <textarea id="moreInfo" placeholder="More details..."></textarea><br>
+  <input type="text" id="mediaUrl" placeholder="Photo or video URL"><br>
+  <input type="text" id="name" placeholder="Your name (optional)"><br>
+  <button onclick="submitForm()">Submit</button>
+</div>
 
    
     <div id="map"></div>
