--- a/index.html
+++ b/index.html
@@ -152,32 +152,7 @@
 </div>
 
 
- 
 
- <div id="reportBox" class="report-box">
-  <h4>Comment here... ! </h4>
-  <label>Location:</label>
-  <input id="reportLocation" placeholder="Click map to select" disabled><br>
-  
-  <label>Issue Type:</label>
-  <select id="reportType">
-    <option>Tree Cutting</option>
-    <option>Fire</option>
-    <option>Illegal Logging</option>
-    <option>Other</option>
-  </select><br>
-
-  <label>Short Description:</label>
-  <input id="reportShort" placeholder="e.g. Sudden clearing"><br>
-
-  <label>Details:</label>
-  <textarea id="reportDetails" rows="2" placeholder="More details..."></textarea><br>
-
-  <label>Your Name (optional):</label>
-  <input id="reportName"><br>
-
-  <button onclick="submitReport()">Submit</button>
-</div>
 
 <div id="map" style="height: 100vh;"></div>
 
@@ -185,10 +160,10 @@
 <div id="reportBox" class="report-box">
   <h4>Report Deforestation</h4>
   <input type="text" id="locationInput" placeholder="Location" readonly><br>
-  <input type="text" id="problem" placeholder="Short Issue (e.g. Tree Cutting)"><br>
+  <input type="text" id="problem" placeholder=" Issue (e.g. Tree Cutting)"><br>
   <textarea id="moreInfo" placeholder="More details..."></textarea><br>
   <input type="text" id="mediaUrl" placeholder="Photo or video URL"><br>
-  <input type="text" id="name" placeholder="Your name (optional)"><br>
+  <input type="text" id="name" placeholder="Your Comment (optional)"><br>
   <button onclick="submitForm()">Submit</button>
 </div>
 
