--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     .sidebar {
       width: 300px;
-      background: #1f2b73;
+      background: #262626;
       color: white;
       display: flex;
       flex-direction: column;
@@ -43,24 +43,40 @@
     }
 
     .sidebar h1 {
+      background: linear-gradient(to right, #00695c, #26a69a);
+      color: white;
+      text-align: center;
       font-size: 20px;
       margin: 0 0 10px;
     }
 
     .sidebar p {
+      margin: 0.3rem 0 0;
+      color:white;
+      opacity: 0.9;
       font-size: 14px;
-      opacity: 0.8;
+      
     }
 
     .sidebar .chart-box {
       background: white;
       color: black;
-      margin-top: 30px;
+      margin-top: 20px;
       padding: 15px;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
-
+   .sidebar footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      text-align: center;
+      padding: 10px;
+      font-size: 12px;
+      background: #66c2a5;
+      color: white;
+    }
+    
     #chart-image {
       max-width: 100%;
       display: none;
@@ -101,6 +117,9 @@
 
     #report-toggle-button button {
       padding: 8px 12px;
+      position: absolute;
+      bottom: 20px;
+      left: 20px;
       background-color: #66c2a5;
       color: white;
       border: none;
@@ -117,16 +136,7 @@
       box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
     }
 
-    footer {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      text-align: center;
-      padding: 10px;
-      font-size: 12px;
-      background: #66c2a5;
-      color: white;
-    }
+
   </style>
 </head>
 <body>
