--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     }
 
     .sidebar h1 {
-      background: linear-gradient(to right, #00695c, #26a69a);
+      background: linear-gradient(to right, #00695c, #66c2a5);
+      border-radius: 12px;
       color: white;
       text-align: center;
       font-size: 20px;
@@ -66,7 +67,7 @@
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
-   .sidebar footer {
+   .sidebar .footer {
       position: absolute;
       bottom: 0;
       width: 100%;
@@ -90,8 +91,6 @@
     #map {
       width: 100%;
       height: 100%;
-      border-top-left-radius: 20px;
-      border-bottom-left-radius: 20px;
       z-index: 1;
     }
 
@@ -115,7 +114,7 @@
       z-index: 1000;
     }
 
-    #report-toggle-button button {
+    .sidebar .report-toggle-button button {
       padding: 8px 12px;
       position: absolute;
       bottom: 20px;
