--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
-   .sidebar .footer {
+   footer {
       position: absolute;
       bottom: 0;
       width: 100%;
@@ -114,7 +114,7 @@
       z-index: 1000;
     }
 
-    .sidebar .report-toggle-button button {
+     #report-toggle-button button {
       padding: 8px 12px;
       position: absolute;
       bottom: 20px;
@@ -142,8 +142,10 @@
   <div id="app">
     <!-- Sidebar -->
     <div class="sidebar">
-      <h1>Forest Loss in Sri Lanka</h1>
-      <p>Interactive Map & Reporting Tool</p>
+      <h1>Shrinking Forests
+</h1>
+      <p> "24 Years of Vegetation Decline by District"
+</p>
         <div id="chart-box">
   <h2>Select a District to View Forest Loss</h2>
   <img id="chart-image" src="" alt="District Chart" style="max-width:100%; display:none;" />
@@ -197,7 +199,7 @@
     </div>
   </div>
 
- <div class="sidebar">
+
   <footer>
     &copy; 2025 Forest Monitoring Tool – Developed for GIS & Remote Sensing Projects | University of Moratuwa
   </footer>
